TWINS-791: fixes + tests